# drone

./: .gitignore  README.md
flight_controller/: .clang-format  CMakeLists.txt  Kconfig  drone_simulation.py  prj.conf  serial_monitor.py
flight_controller/boards/: stm32f411e_disco.overlay
flight_controller/src/: log.c  log.h  main.c
flight_controller/src/comm/: i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h
flight_controller/src/esc/: esc.c  esc.h
flight_controller/src/pid/: pid.c  pid.h
flight_controller/src/sensors/: sensors.c  sensors.h
flight_controller/src/sensors/barometer/: ms5611.c  ms5611.h
flight_controller/src/sensors/imu/: bmi088.c  bmi088.h
flight_controller/src/sensors/tof/: vl53l1x.c  vl53l1x.h
scripts/: build_qemu.sh  build_stm32.sh  run_qemu_simulation.sh  start_drone_server_simulator.sh
virtual_pid/: drone_simulation.py
virtual_pid/virtual_pid/: CMakeLists.txt  Kconfig  prj.conf
virtual_pid/virtual_pid/boards/: qemu_cortex_m3.overlay  stm32f411e_disco.overlay
virtual_pid/virtual_pid/src/: main.c
virtual_pid/virtual_pid/src/esc/: esc.c  esc.h
virtual_pid/virtual_pid/src/pid/: pid.c  pid.h
